--- a/.config/i3/config
+++ b/.config/i3/config
@@ -247,11 +247,11 @@ exec --no-startup-id i3-msg 'workspace 6:music; exec /usr/bin/urxvt -e bash -c "
 
 # Glitter and diamonds
 exec_always --no-startup-id ~/.scripts/compton/compton.sh
-exec_always --no-startup-id ~/.scripts/polybar/polybar.sh
+exec_always --no-startup-id bash -l ~/.scripts/polybar/polybar.sh
 exec_always --no-startup-id xset r rate 200 35
 #exec_always --no-startup-id ~/.scripts/background/bg.sh
 #exec_always --no-startup-id ~/.scripts/background/gifbg.sh
-exec_always --no-startup-id ~/.scripts/background/vidbg.sh
+exec_always --no-startup-id bash -l ~/.scripts/background/vidbg.sh
 
 # Hotkeys
 bindsym $mod+Shift+u exec ~/.scripts/colors/colors.sh
