--- a/.config/polybar/config
+++ b/.config/polybar/config
@@ -1,6 +1,5 @@
 [bar/top]
-#monitor = DP-2
-#monitor = DP-1-1
+monitor = ${env:MONITOR}
 width = 100%
 height = 37
 
@@ -50,7 +49,7 @@ tray-scale = 1.0
 ;pseudo-transparency = true
 
 [bar/top2]
-#monitor = HDMI-0
+monitor = ${env:MONITOR}
 width = 100%
 height = 30
 
