--- a/.config/i3/config
+++ b/.config/i3/config
@@ -240,7 +240,7 @@ assign [class="Wine"] $ws_game
 
 # Autostart programs
 exec --no-startup-id i3-msg 'workspace 1:term; exec /usr/bin/urxvt'
-exec --no-startup-id i3-msg 'workspace 2:code; exec /usr/bin/subl'
+exec --no-startup-id i3-msg 'workspace 2:code; exec /usr/bin/urxvt'
 exec --no-startup-id i3-msg 'workspace 3:web; exec /usr/bin/firefox'
 exec --no-startup-id i3-msg 'workspace 4:chat; exec /usr/bin/discord'
 #exec --no-startup-id i3-msg 'workspace 4:chat; exec ~/.scripts/steam/steam.sh'
