--- a/.config/i3/config
+++ b/.config/i3/config
@@ -244,7 +244,7 @@ exec --no-startup-id i3-msg 'workspace 2:code; exec /usr/bin/urxvt'
 exec --no-startup-id i3-msg 'workspace 3:web; exec /usr/bin/firefox'
 exec --no-startup-id i3-msg 'workspace 4:chat; exec /usr/bin/discord'
 #exec --no-startup-id i3-msg 'workspace 4:chat; exec ~/.scripts/steam/steam.sh'
-exec --no-startup-id i3-msg 'workspace 6:music; exec /usr/bin/urxvt -e bash -c "ncmpcpp"'
+exec --no-startup-id i3-msg 'workspace 6:music; exec /usr/bin/urxvt -e bash --init-file <(echo "source ~/.bashrc;ncmpcpp")'
 
 # Glitter and diamonds
 exec_always --no-startup-id ~/.scripts/compton/compton.sh
