--- a/.config/i3/config
+++ b/.config/i3/config
@@ -240,11 +240,11 @@ assign [class="Wine"] $ws_game
 
 # Autostart programs
 exec --no-startup-id i3-msg 'workspace 1:term; exec /usr/bin/urxvt'
-exec --no-startup-id i3-msg 'workspace 2:code; exec /usr/bin/urxvt -e bash --init-file <(echo "source .bashrc;code")'
+exec --no-startup-id i3-msg 'workspace 2:code; exec ~/.scripts/urxvt/exec code'
 exec --no-startup-id i3-msg 'workspace 3:web; exec /usr/bin/firefox'
 exec --no-startup-id i3-msg 'workspace 4:chat; exec /usr/bin/discord'
 #exec --no-startup-id i3-msg 'workspace 4:chat; exec ~/.scripts/steam/steam.sh'
-exec --no-startup-id i3-msg 'workspace 6:music; exec /usr/bin/urxvt -e bash --init-file <(echo "source ~/.bashrc;ncmpcpp")'
+exec --no-startup-id i3-msg 'workspace 6:music; exec ~/.scripts/urxvt/exec ncmpcpp'
 
 # Glitter and diamonds
 exec_always --no-startup-id ~/.scripts/compton/compton.sh
