--- a/.config/i3/config
+++ b/.config/i3/config
@@ -259,6 +259,7 @@ exec_always --no-startup-id bash -l ~/.scripts/background/vidbg.sh
 # Hotkeys
 bindsym $mod+Shift+u exec ~/.scripts/colors/colors.sh
 bindsym Print exec scrot '%Y-%m-%d-%s_screenshot_$wx$h.jpg' -e 'mv $f ~/Pictures/'
+bindsym Mod1+Return exec firefox --new-window
 
 # Move floating
 bindsym $mod+m mode "move" focus floating
@@ -293,18 +294,18 @@ bindsym Mod1+7 workspace $ws_search
 bindsym Mod1+z workspace $ws_term
 bindsym Mod1+x workspace $ws_code
 bindsym Mod1+c workspace $ws_web
+bindsym Mod1+$mod+c workspace $ws_search
 bindsym Mod1+v workspace $ws_chat
 bindsym Mod1+b workspace $ws_game
 bindsym Mod1+n workspace $ws_music
-bindsym Mod1+m workspace $ws_search
 
 bindsym Mod1+Shift+z move container to workspace $ws_term
 bindsym Mod1+Shift+x move container to workspace $ws_code
 bindsym Mod1+Shift+c move container to workspace $ws_web
+bindsym Mod1+$mod+Shift+c move container to workspace $ws_search
 bindsym Mod1+Shift+v move container to workspace $ws_chat
 bindsym Mod1+Shift+b move container to workspace $ws_game
 bindsym Mod1+Shift+n move container to workspace $ws_music
-bindsym Mod1+Shift+m move container to workspace $ws_search
 
 # Arrow swapping
 bindsym Mod1+Left workspace prev
