--- a/.config/i3/config
+++ b/.config/i3/config
@@ -293,16 +293,16 @@ bindsym Mod1+6 workspace $ws_music
 bindsym Mod1+7 workspace $ws_search
 bindsym Mod1+z workspace $ws_term
 bindsym Mod1+x workspace $ws_code
-bindsym Mod1+c workspace $ws_web
-bindsym Mod1+$mod+c workspace $ws_search
+bindsym Mod1+$mod+c workspace $ws_web
+bindsym Mod1+c workspace $ws_search
 bindsym Mod1+v workspace $ws_chat
 bindsym Mod1+b workspace $ws_game
 bindsym Mod1+n workspace $ws_music
 
 bindsym Mod1+Shift+z move container to workspace $ws_term
 bindsym Mod1+Shift+x move container to workspace $ws_code
-bindsym Mod1+Shift+c move container to workspace $ws_web
-bindsym Mod1+$mod+Shift+c move container to workspace $ws_search
+bindsym Mod1+$mod+Shift+c move container to workspace $ws_web
+bindsym Mod1+Shift+c move container to workspace $ws_search
 bindsym Mod1+Shift+v move container to workspace $ws_chat
 bindsym Mod1+Shift+b move container to workspace $ws_game
 bindsym Mod1+Shift+n move container to workspace $ws_music
