Fix systray opacity as good as it can be

--- a/.config/compton.conf
+++ b/.config/compton.conf
@@ -15,7 +15,9 @@ shadow-exclude = [
 	"class_g ?= 'Notify-osd'",
 	"class_g = 'Cairo-clock'",
 	"class_g = 'xwinwrap'",
-	"class_g = 'mpv'" ];
+	"class_g = 'mpv'",
+	"class_i = 'tray'"
+];
 shadow-ignore-shaped = false;
 xinerama-shadow-crop = false;
 menu-opacity = 0.8;
@@ -74,5 +76,6 @@ blur-background-exclude = [
 ];
 opacity-rule = [
 	"100:class_g = 'xwinwrap'",
-	"100:class_g = 'mpv'"
+	"100:class_g = 'mpv'",
+	"60:class_i = 'tray'"
 ]
