--- a/.config/polybar/config
+++ b/.config/polybar/config
@@ -3,7 +3,9 @@ monitor = ${env:MONITOR}
 width = 100%
 height = 37
 
-background = #99313842
+background_color = #313842
+background_opacity = 99
+background = #${self.background_opacity}313842
 #background = #80ffffff
 #foreground = #ccffffff
 #foreground = #4c4c4c
@@ -38,7 +40,7 @@ modules-right = volume backlight wireless-network wired-network battery cpu memo
 tray-position = right
 tray-detached = false
 tray-maxsize = 20
-tray-background = ${self.background}
+tray-background = ${self.background_color}
 tray-offset-x = 0
 tray-offset-y = 0
 tray-padding = 0
